compiler/testData/diagnostics/tests/incompleteCode/pseudocodeTraverseNextInstructions.jet
package b

fun foo() {
    for (i in <!UNRESOLVED_REFERENCE!>collection<!>) {
        <!UNUSED_FUNCTION_LITERAL!>{
         break
    }<!>
}<!SYNTAX!><!>